# ifc-live

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  PROTOCOL.md
tools/: pyproject.toml
