[project]
name = "ifc-live-dev"
version = "0.1.0"
description = "Dev tooling for ifc-live — local CI runner and other contributor helpers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ifc-live contributors" }]

# Intentionally no runtime deps. This package wraps existing tooling (uv,
# ruff, pyright, pytest) which are all available as workspace dev-dependencies.
dependencies = []

[project.scripts]
check = "ifc_live_dev.check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ifc_live_dev"]
